...
        return '3:4';
      case AspectRatioPreset.ratio4x5:
        return '4:5';
      case AspectRatioPreset.ratio5x4:
        return '5:4';
      case AspectRatioPreset.ratio16x9:
        return '16:9';
      case AspectRatioPreset.ratio9x16:
        return '9:16';
      case AspectRatioPreset.ogp:
        return '1.91:1';
    }
  }
...
